[package]
name = "ocelot"
readme = "README.md"
description = "A library for oblivious transfer protocols"
categories = ["cryptography"]
keywords = ["cryptography", "oblivious-transfer", "OT"]
autoexamples = true

[lib]

[features]
nightly = ["curve25519-dalek/nightly", "curve25519-dalek/simd_backend", "scuttlebutt/nightly"]


[dependencies]
blake3 = "1.3.3"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4.1.1" }
rand = "0.8.5"
scuttlebutt = { git = "https://github.com/FatemehJD/scuttlebutt", features = ["curve25519-dalek"] }
vectoreyes = { git = "https://github.com/FatemehJD/vectoreyes", branch = "main" }
generic-array = "0.14.6"
subtle = "2.4.1"
bytemuck = "1.12.3"

[build-dependencies]
cc = "1.0.77"

[dev-dependencies]
criterion = "0.4.0"
nix = "0.26.1"
proptest = "1.0.0"
clap = "4.0.29"

[[bench]]
name = "ot"
harness = false

[[bench]]
name = "oprf"
harness = false

[[bench]]
name = "svole"
harness = false

[[example]]
name = "kmprt"
harness = false
